altered for border

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ form {
     height:110px;
     width:190px;
     margin:auto;
-    border:1px #CCC solid;
+    border:50px rgb(75, 145, 90) solid;
     padding:10px;
 }
     
