--- a/style.css
+++ b/style.css
@@ -35,11 +35,13 @@ textarea {
 ul, ol {
     margin: 20px;
     padding: 0;
+
 }
 
 li {
     font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
     border-bottom: 1px solid #ccc;
+    text-transform: capitalize;
 }
    
 li:last-child {
