--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
     background-image: 
     url(https://qph.fs.quoracdn.net/main-qimg-d017f29ccdb5cd2a29663e5bdfe99605.webp);
-    background-repeat: repeat
+    background-repeat: repeat;
+    padding: 40px;
 }
 
 h1 {
@@ -72,3 +73,4 @@ div h3 {
     font-size: 30;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
